--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,6 @@
 name: 'coverage'
 on:
-  pull_request_target:
+  push:
     branches:
       - master
       - main
@@ -10,3 +10,4 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: ArtiomTr/jest-coverage-report-action@v2
+        # npx jest --ci --json --coverage --testLocationInResults --outputFile=report.json
