--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -12,5 +12,6 @@ jobs:
       - uses: ArtiomTr/jest-coverage-report-action@v2
         with:
           test-script: npm test
+          package-manager: bun
 
         # npx jest --ci --json --coverage --testLocationInResults --outputFile=report.json
