--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,8 +4,13 @@ on:
     branches:
       - master
       - main
+
 jobs:
   coverage:
+    permissions:
+      contents: write
+      checks: write
+      pull-requests: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
