--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,7 +16,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ArtiomTr/jest-coverage-report-action@v2
         with:
-          test-script: npm test:cov
+          test-script: npm test
           package-manager: npm
+          output: report-markdown
 
         # npx jest --ci --json --coverage --testLocationInResults --outputFile=report.json
