--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -16,8 +16,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ArtiomTr/jest-coverage-report-action@v2
         with:
-          test-script: npm test
+          test-script: npx jest --ci --json --coverage --testLocationInResults --outputFile=report.json
           package-manager: npm
-          output: report-markdown
 
         # npx jest --ci --json --coverage --testLocationInResults --outputFile=report.json
