--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        test-suite: [test:app, test:user] # 병렬로 실행할 테스트 스크립트
+        test-suite: [test-app, test-user] # 병렬로 실행할 테스트 스크립트
 
     permissions:
       contents: read
@@ -37,29 +37,3 @@ jobs:
         with:
           name: ${{ matrix.test-suite }}-result
           path: junit-${{ matrix.test-suite }}.xml
-
-  Combine-Reports:
-    needs: Dev-Testing
-    runs-on: ubuntu-20.04
-
-    steps:
-      - name: Download test results
-        uses: actions/download-artifact@v3
-        with:
-          path: ./results
-
-      - name: Combine test results
-        run: |
-          # Combine the junit files into one report
-          npx jest-junit-merge ./results/**/*.xml -o combined-junit.xml
-
-      - name: Test Report
-        id: test-report
-        uses: dorny/test-reporter@v1.7.0
-        if: success() || failure()
-        with:
-          name: test-results
-          path: combined-junit.xml
-          fail-on-error: 'false'
-          reporter: jest-junit
-          token: ${{ secrets.GITHUB_TOKEN }}
