--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        test-suite: [test-app, test-user] # 병렬로 실행할 테스트 스크립트
+        test-suite: [test:app, test:user] # 병렬로 실행할 테스트 스크립트
 
     permissions:
       contents: read
