--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,28 +4,42 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
+
 jobs:
-  Testing-Report:
+  Testing:
     runs-on: ubuntu-20.04
     permissions:
       contents: read
       actions: read
       checks: write
+
     steps:
-      - name: checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: setup node
+      - name: Cache Node.js modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4.0.0
         with:
           node-version: 20.x
 
-      - name: install dependencies
-        run: npm i
+      - name: Install dependencies
+        run: npm ci
+
       - name: Run Unit Test
         run: npm run test:report
 
-      - name: Test Report
+      - name: Upload Test Report
         id: test-report
         uses: dorny/test-reporter@v1.7.0
         if: success() || failure()
